@@ -4,16 +4,14 @@ import static nl.uu.cs.aplib.AplibEDSL.*;
 
 import agent.iv4xr.AgentState;
 import agent.navigation.strategy.NavTactic;
-import agent.selector.EntitySelector;
-import agent.selector.ItemSelector;
 import agent.selector.TileSelector;
 import eu.iv4xr.framework.mainConcepts.WorldModel;
-import java.util.Arrays;
-import java.util.List;
+import java.util.Set;
 import nethack.enums.CommandEnum;
 import nethack.object.Command;
 import nethack.object.Entity;
 import nethack.object.Player;
+import nethack.world.tiles.*;
 import nl.uu.cs.aplib.mainConcepts.Goal;
 import nl.uu.cs.aplib.mainConcepts.GoalStructure;
 import nl.uu.cs.aplib.utils.Pair;
@@ -41,17 +39,32 @@ public class GoalLib {
                     Actions.openDoor().on(Predicates.get_closedDoor()).lift(),
 
                     // Collect money and potions
-                    Actions.quaffItem()
-                        .on(
+                    action("HIHI")
+                        .do1(
+                            (AgentState S) -> {
+                              System.exit(2);
+                              return 0;
+                            })
+                        .on_(
                             (AgentState S) ->
-                                ItemSelector.hallucinationPotion.apply(
-                                    Arrays.asList(S.worldmodel.player.current.inventory.items), S))
+                                Set.of(Water.class, Pool.class, Moat.class)
+                                    .contains(
+                                        S.app().level().surface.getTile(S.loc().pos).getClass()))
                         .lift(),
-                    NavTactic.interactWorldEntity(
-                        EntitySelector.hallucinationPotion,
-                        List.of(new Command(CommandEnum.COMMAND_PICKUP))),
-                    NavTactic.interactWorldEntity(
-                        EntitySelector.money, List.of(new Command(CommandEnum.COMMAND_PICKUP))),
+                    NavTactic.navigateToTile(TileSelector.water),
+                    //                    Actions.quaffItem()
+                    //                        .on(
+                    //                            (AgentState S) ->
+                    //                                ItemSelector.hallucinationPotion.apply(
+                    //
+                    // Arrays.asList(S.worldmodel.player.current.inventory.items), S))
+                    //                        .lift(),
+                    //                    NavTactic.interactWorldEntity(
+                    //                        EntitySelector.hallucinationPotion,
+                    //                        List.of(new Command(CommandEnum.COMMAND_PICKUP))),
+                    //                    NavTactic.interactWorldEntity(
+                    //                        EntitySelector.money, List.of(new
+                    // Command(CommandEnum.COMMAND_PICKUP))),
 
                     // Navigation
                     NavTactic.explore(),
